# libav.module

./: CMakeLists.txt
include/libavformat/: avio.h
include/libavutil/: avutil.h  common.h  rational.h
libav/: libav.macros  libav.vcxproj
module/: libav.ixx  libav.vcxproj  libav.vcxproj.filters
